--- a/about_me.html
+++ b/about_me.html
@@ -5,16 +5,34 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<link rel="stylesheet" href="output.css" />
 	</head>
 	<body>
-		<h1>Hi, I am Sam</h1>
-		<h3>I am very cool and big brain. My brain has many wrinkles</h3>
-		<h4>Reasons I am Cool</h4>
-		<ul>
-			<li>I am good at technology</li>
-			<li>I never make mistakes except when I make mistakes</li>
-			<li>Uh</li>
-			<li>I ran out of ideas</li>
-		</ul>
+		<div class="bg-sky-300/100 w-screen h-screen">
+			<div class="flex justify-center">
+				<h1
+					class="m-5 p-2 border-2 rounded-md w-1/6 border-white bg-white drop-shadow-xl text-center text-3xl"
+				>
+					Hi, I am Sam
+				</h1>
+			</div>
+			<div class="flex justify-center">
+				<h3 class="m-5 p-2 border-2 rounded-md w-1/2 border-white bg-white drop-shadow-xl text-center text-3xl">I am very cool and big brain. My brain has many wrinkles</h3>
+			</div>
+			<div class="flex justify-center">
+				<h4 class="m-5 p-2 border-2 rounded-md w-1/2 border-white bg-white drop-shadow-xl text-center text-3xl">Reasons I am Cool:</h4>
+			</div class="grid grid-cols-4">
+					<p>I am good at technology</p>
+					<p>I never make mistakes except when I make mistakes</p>
+					<p>Uh</p>
+					<p>I ran out of ideas</p>
+			</div>
+			<div class="grid grid-cols-4 gap-4">
+				<div>01</div>
+				<!-- ... -->
+				<div>09</div>
+			  </div>
+		<div>
 	</body>
 </html>
