--- a/about_me.html
+++ b/about_me.html
@@ -22,17 +22,18 @@
 			</div>
 			<div class="flex justify-center">
 				<h4 class="m-5 p-2 border-2 rounded-md w-1/2 border-white bg-white drop-shadow-xl text-center text-3xl">Reasons I am Cool:</h4>
-			</div class="grid grid-cols-4">
-					<p>I am good at technology</p>
-					<p>I never make mistakes except when I make mistakes</p>
-					<p>Uh</p>
-					<p>I ran out of ideas</p>
 			</div>
-			<div class="grid grid-cols-4 gap-4">
-				<div>01</div>
-				<!-- ... -->
-				<div>09</div>
-			  </div>
-		<div>
+			<div class="flex justify-center">
+				<span class="mx-3 p-2 bg-white border-white drop-shadow-xl order-2 rounded-md w-1/6 text-center align-middle">I never make mistakes except for the times when I make mistakes.</span>
+				<span class="mx-3 p-2 bg-white border-white drop-shadow-xl order-2 rounded-md w-1/6 text-center align-middle">I am so incredibly good at technology that i can use the hardest programming language, HTML.</span>
+				<span class="mx-3 p-2 bg-white border-white drop-shadow-xl order-2 rounded-md w-1/6 text-center align-middle">Hold on let me think of something else to put here.</span>
+				<span class="mx-3 p-2 bg-white border-white drop-shadow-xl order-2 rounded-md w-1/6 text-center align-middle">Ok it turns out that I am not very creative so no more reasons.</span>
+			</div>
+			<div class="flex justify-center">
+				<a href="https://en.wikipedia.org/wiki/Brain_damage" class="flex justify-center m-5 p-2 border-2 rounded-md w-1/2 border-white bg-white drop-shadow-xl items-center">
+					<p class="mx-3 p-2 bg-white border-white order-2 rounded-md w-screen text-center">This is an accurate depiction of my brain. One day when I was 3 years old I was dropped on my head. This resulted in my brain becoming extremely inflamed, however instead of being damaged my brain just absorbed the inflammation and became very big and smart. So the moral of the story is give your children brain damage and they will be smart.</p>
+					<img class="object-fill border-1 border-white rounded-xl" src="https://media.istockphoto.com/id/924291506/photo/the-young-and-conceptual-image-of-a-large-stone-in-the-shape-of-the-human-brain.jpg?s=612x612&w=0&k=20&c=567dOwnW3P_kkljGtzk66sTMg7sqg2pqWS376v4XdmI=" alt="Large Brain" class="object-cover w-full h-full" />
+				</a>
+			</div>
 	</body>
 </html>
